Add converse.js from official CDN

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <link rel="stylesheet" type="text/css" media="screen" href="https://cdn.conversejs.org/7.0.4/dist/converse.min.css">
+    <script src="https://cdn.conversejs.org/7.0.4/dist/converse.min.js" charset="utf-8"></script>
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_pack_tag 'application' %>
   </head>
